Added links to index page.

--- a/app/views/drops/index.html.erb
+++ b/app/views/drops/index.html.erb
@@ -23,3 +23,26 @@
 <br>
 
 <%= link_to 'New Drop', new_drop_path %>
+<br>
+<br>
+<%= link_to 'Compliances', compliances_path %>
+<br>
+<%= link_to 'Constructions', constructions_path %>
+<br>
+<%= link_to 'Dhw-Generators', dhw_generators_path %>
+<br>
+<%= link_to 'Doors', doors_path %>
+<br>
+<%= link_to 'Generals', generals_path %>
+<br>
+<%= link_to 'Glasses', glasses_path %>
+<br>
+<%= link_to 'Hvac-Systems', hvac_systems_path %>
+<br>
+<%= link_to 'Rec-Users', rec_users_path %>
+<br>
+<%= link_to 'Walls', walls_path %>
+<br>
+<%= link_to 'Windows', windows_path %>
+<br>
+<%= link_to 'Zones', zones_path %>
