Upload inp button.

--- a/app/views/drops/index.html.erb
+++ b/app/views/drops/index.html.erb
@@ -22,7 +22,7 @@
 
 <br>
 
-<%= link_to 'New Drop', new_drop_path %>
+<%= link_to 'New Drop (upload .inp)', new_drop_path %>
 <br>
 <br>
 <%= link_to 'Compliances', compliances_path %>
