Small HTML changes.

--- a/app/views/drops/index.html.erb
+++ b/app/views/drops/index.html.erb
@@ -21,9 +21,10 @@
 </table>
 
 <br>
-
 <%= link_to 'New Drop (upload .inp)', new_drop_path %>
 <br>
+<br>
+<h1>Tables</h1>
 <br>
 <%= link_to 'Compliances', compliances_path %>
 <br>
